test/bad/no_return_at_the_end.dws
int f() {
    int d = 0
}

void main() {
    printi(f())
}
